# simdna

./: .gitignore  Cargo.toml  LICENSE  README.md  seq_lib.txt
benches/: my_benchmark.rs
src/: avx2.rs  fallback.rs  lib.rs  neon.rs  seed.rs  simdna.rs  utils.rs
