[package]
name = "simdna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[package.metadata.docs.rs]
features = ["simd_neon"]

[features]
# Enable AVX2
simd_avx2 = []
# Enable Neon
simd_neon = []

[[bench]]
name = "my_benchmark"
harness = false

